# radius

./: .gitignore  CPU.936171475.3941.md  README.md  SKILLS.md  bunfig.toml  package.json  radiusd  test-tsgo-provider.ts  tsconfig.json
docs/: index.md  package.json
rad/: package.json  tsconfig.json
rust/: Cargo.toml
rust/src/: main.rs
rust/src/buffer/: manager.rs  mod.rs
rust/src/commands/: accept_change.rs  challenge_change.rs  codelens.rs  comment.rs  create.rs  diff.rs  ext.rs  fix.rs  format.rs  graph.rs  grep.rs  hover.rs  insert.rs  list_notifications.rs  mod.rs  modify_var.rs  outline.rs  problems.rs  read_var.rs  redo.rs  replace.rs  snippet.rs  solve_conflict.rs  str_replace.rs  task.rs  tokens.rs  typehierarchy.rs  undo.rs  view.rs
rust/src/ipc/: mod.rs
rust/src/shared/: context.rs  mod.rs
scripts/: build.sh  generate-signing-key.ts  gh-actions-status.sh  prepare-release-assets.ts  test-parallel.sh  test-safe.sh  upload-release-assets.ts
test-extension/: package.json
test-project/: tsconfig.json
tests/: basic.test.ts  build-coexistence.test.ts  change-metadata.test.ts  cli-ux.test.ts  colors.test.ts  command-suggest.test.ts  context-conventions.test.ts  context-read.test.ts  context-write.test.ts  create-enhanced.test.ts  dap-integration.test.ts  diagnostics-tracking.test.ts  dogtag.test.ts  extension-host.test.ts  graph.test.ts  group-codeactions.test.ts  group-langtools.test.ts  group-lspviews.test.ts  history.test.ts  ledger-unit.test.ts  llm-readable-view.test.ts  lsp-core.test.ts  lsp-diagnostics.test.ts  lsp-lifecycle.test.ts  (+36 more)
(+218 files in other folders)
