[package]
name = "radiusd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1.6"
ed25519-dalek = "2"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
anyhow = "1"
walkdir = "2"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
